--- a/oblig/dummyhtml.html
+++ b/oblig/dummyhtml.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="MVC2.CSS">
+    <link rel="stylesheet" href="Itemview.CSS">
     <link rel="stylesheet" href="Stats.css">
     <link rel="stylesheet" href="item.css">
     <script src="MVC.JS"></script>
@@ -13,7 +14,7 @@
     <script src="Secondarystats.JS"></script>
     <script src="Equipment.js"></script>
     <script src="Itemview.js"></script>
-
+ <img src="" alt="">
 
     
 
