--- a/oblig/dummyhtml.html
+++ b/oblig/dummyhtml.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/GridContainers.css">
     <link rel="stylesheet" href="MVC2.CSS">
     <link rel="stylesheet" href="Itemview.CSS">
     <link rel="stylesheet" href="Stats.css">
@@ -17,11 +18,7 @@
     <script src="Equipment.js"></script>
     <script src="LW.js"></script>
     <script src="Itemview.js"></script>
- <img src="" alt="">
-
-    
-
-</head>
+ </head>
 <body>
     
     <div id="hovedSide"></div>
