--- a/oblig/dummyhtml.html
+++ b/oblig/dummyhtml.html
@@ -4,12 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/GridContainers.css">
+    <link rel="stylesheet" href="GridContainers.css">
     <link rel="stylesheet" href="MVC2.CSS">
     <link rel="stylesheet" href="Itemview.CSS">
     <link rel="stylesheet" href="Stats.css">
     <link rel="stylesheet" href="item.css">
     <link rel="stylesheet" href="othervari.css">
+    <link rel="stylesheet" href="otherstuff.css">
     <script src="MVC.JS"></script>
     <script src="MVCDIVS.js"></script>
     <script src="LVLUP.js"></script>
