--- a/oblig/things that seemed outdated.html
+++ b/oblig/things that seemed outdated.html
@@ -8,9 +8,166 @@
 <body>
     <script>
 
-
-
-// html+=`<div class=fixed>fixed Chakra?: ${option.FixedChakra}</div>`
+<div class="Ninjasheet1-containers">
+  <div class="Ninjainfo1-containers">
+    <div class="position"></div>
+    <div class="theninja">
+      <div class="hei"></div>
+      <div class="ID"></div>
+      <div class="NinjaName"></div>
+    </div>
+    <div class="ninjaImg"></div>
+    <div class="er">
+      <div class="Cost"></div>
+      <div class="Chakra"></div>
+    </div>
+    <div class="LVLbox">
+      <div class="button"></div>
+      <div class="LVL"></div>
+    </div>
+    <div class="Penalty-containers">
+      <div class="is-off"></div>
+      <div class="Y-N"></div>
+      <div class="offpos"></div>
+      <div class="pen"></div>
+    </div>
+  </div>
+  <div class="fq">
+    <div class="Fixed1">
+      <div class="quarter1"></div>
+      <div class="NY"></div>
+    </div>
+    <div class="Fixed2">
+      <div class="quarter2"></div>
+      <div class="YN"></div>
+    </div>
+  </div>
+  <div class="Item-container">
+    <div class="itemTg1"></div>
+    <div class="itemTg2"></div>
+    <div class="itemTg3"></div>
+    <div class="item1"></div>
+    <div class="item2"></div>
+    <div class="item3"></div>
+    <div class="ItemTg"></div>
+    <div class="ItemEq"></div>
+  </div>
+  <div class="BL-containers">
+    <div class="bloodline"></div>
+    <div class="Blood-line"></div>
+    <div class="Blood-Line-LvL"></div>
+    <div class="bloodlinelvl"></div>
+  </div>
+  <div class="input-container"></div>
+  <div class="Effi-container">
+    <div class="tai-effi"></div>
+    <div class="nin-effi"></div>
+    <div class="buki-effi"></div>
+    <div class="Stam-effi"></div>
+    <div class="ele-effi"></div>
+    <div class="gen-effi"></div>
+    <div class="atk-effi"></div>
+    <div class="strike-effi"></div>
+    <div class="hit-effi"></div>
+    <div class="reroll-effi"></div>
+    <div class="focus-effi"></div>
+    <div class="focusburst-effi"></div>
+    <div class="focusrange-effi"></div>
+    <div class="boost-effi"></div>
+    <div class="buki-rec-effi"></div>
+    <div class="gen-act-effi"></div>
+    <div class="gen-mastery-effi"></div>
+    <div class="gen-rec-effi"></div>
+    <div class="endu-effi"></div>
+  </div>
+  <div class="Efficantcy"></div>
+  <div class="The-Stats"></div>
+  <div class="txt">
+    <div class="tai"></div>
+    <div class="nin"></div>
+    <div class="buki"></div>
+    <div class="stam"></div>
+    <div class="ele"></div>
+    <div class="gen"></div>
+    <div class="atk"></div>
+    <div class="strike"></div>
+    <div class="hit"></div>
+    <div class="reroll"></div>
+    <div class="focus"></div>
+    <div class="focus-burst"></div>
+    <div class="focus-range"></div>
+    <div class="boost"></div>
+    <div class="buki-rec"></div>
+    <div class="gen-act"></div>
+    <div class="gen-mastery"></div>
+    <div class="gen-rec"></div>
+    <div class="endu"></div>
+  </div>
+  <div class="input-containers">
+    <div class="s01"></div>
+    <div class="s02"></div>
+    <div class="s03"></div>
+    <div class="s04"></div>
+    <div class="s05"></div>
+    <div class="s06"></div>
+    <div class="s07"></div>
+    <div class="s08"></div>
+    <div class="s09"></div>
+    <div class="s10"></div>
+    <div class="s11"></div>
+    <div class="s12"></div>
+    <div class="s13"></div>
+    <div class="s14"></div>
+    <div class="s15"></div>
+    <div class="s16"></div>
+    <div class="s17"></div>
+    <div class="s18"></div>
+    <div class="s19"></div>
+  </div>
+  <div class="Stats">
+    <div class="Primestat-containers"></div>
+    <div class="StatNames"></div>
+    <div class="Secondary-containers">
+      <div class="Atk"></div>
+      <div class="Strike"></div>
+      <div class="Hit"></div>
+      <div class="Reroll"></div>
+      <div class="Focus"></div>
+      <div class="Focus-Burst"></div>
+      <div class="Focus-Range"></div>
+      <div class="Buki-boost"></div>
+      <div class="Buki-rec"></div>
+      <div class="Gen-act"></div>
+      <div class="Gen-mastery"></div>
+      <div class="Gen-rec"></div>
+      <div class="Endu"></div>
+    </div>
+  </div>
+  <div class="Dmgout-containers">
+    <div class="r21">
+      <div class="avrdmg"></div>
+      <div class="D-R"></div>
+    </div>
+    <div class="dmg">
+      <div class="Dmgran"></div>
+      <div class="lowhigh">
+        <div class="low-dmg"></div>
+        <div class="high-dmg"></div>
+      </div>
+    </div>
+    <div class="crittrange">
+      <div class="avrdmgcritt"></div>
+      <div class="dmg-rng-critt"></div>
+    </div>
+    <div class="crittdmg">
+      <div class="avrcrit-dmg"></div>
+      <div class="lowcrit-higcritt">
+        <div class="low-critt"></div>
+        <div class="high-critt"></div>
+      </div>
+    </div>
+  </div>
+</div>
     </script>
     
 </body>
