--- a/oblig/dummyhtml.html
+++ b/oblig/dummyhtml.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="item.css">
     <link rel="stylesheet" href="othervari.css">
     <link rel="stylesheet" href="otherstuff.css">
+    <link rel="stylesheet" href="Effi.css">
     <script src="MVC.JS"></script>
     <script src="MVCDIVS.js"></script>
     <script src="LVLUP.js"></script>
