--- a/oblig/dummyhtml.html
+++ b/oblig/dummyhtml.html
@@ -7,19 +7,23 @@
 
                 <!-- finalized CSS -->
     <link rel="stylesheet" href="GridContainers.css">
-    <link rel="stylesheet" href="MVC2.CSS">
-    <link rel="stylesheet" href="Ninjasheet1.css">
+   <link rel="stylesheet" href="MVC2.CSS">
     <link rel="stylesheet" href="infosheet.css">
-    <link rel="stylesheet" href="botox.css">
+    <link rel="stylesheet" href="Stats.css">
+    <link rel="stylesheet" href="a1.css">
+    <link rel="stylesheet" href="a2.css">
+    <link rel="stylesheet" href="Tagname.css">
+    <link rel="stylesheet" href="innput.css">
+    <link rel="stylesheet" href="childnParent.css">
+    <link rel="stylesheet" href="Dmgout.css">
                 <!-- needs to be edited -->
     <link rel="stylesheet" href="Itemview.CSS">
-    <link rel="stylesheet" href="Stats.css">
+   
     <link rel="stylesheet" href="item.css">
     <link rel="stylesheet" href="othervari.css">
-    <link rel="stylesheet" href="otherstuff.css">
     <link rel="stylesheet" href="Effi.css">
                 <!-- empty CSS -->
-   
+
     <script src="MVC.JS"></script>
     <script src="MVCDIVS.js"></script>
     <script src="LVLUP.js"></script>
@@ -31,13 +35,13 @@
  </head>
 <body>
     <!-- //ninja 1 sheet1 tabel with lots off containers// -->
-    <div class="Ninjasheet1-containers"></div> 
+    <div class="grid-container"></div>
     <div id="hovedSide"></div>
-   
+
     <div id="selectResult"></div>
  <div id="result"></div>
-   
- 
+
+
 
 
     <script>
@@ -48,25 +52,25 @@ var selectResult = document.getElementById('selectResult')
 
 updateViewItem()
 
- MakeDropDown();
+//  MakeDropDown();
   selectNinja(); // KOMMENTER UT DENNE NÅR DU IKKE VIL HA FERDIG VALGT NINJA
- function MakeDropDown() {
-         let html = `<select class="hei" onchange="selectNinja(this.value)">` ; 
-             // console.log("make dropdown kjører")
-         for(let ninja of Ninjas){
-           html +=`<option>${ninja.NinjaName}</option>`
-         }
-         html += '</select>'
-      
-         hovedSide.innerHTML = html;
-     
-     }
+//  function MakeDropDown() {
+//          let html = `<select class="hei" onchange="selectNinja(this.value)">` ;
+//              // console.log("make dropdown kjører")
+//          for(let ninja of Ninjas){
+//            html +=`<option>${ninja.NinjaName}</option>`
+//          }
+//          html += '</select>'
+
+//          hovedSide.innerHTML = html;
+
+//      }
 function selectNinja(clickedNinja) {
         selectedNinja = clickedNinja;
          selectedNinja = 'kurenai'; // KOMMENTER UT DENNE NÅR DU IKKE VIL HA FERDIG VALGT NINJA
         makeDivs();
     }
-   
+
 
 </script>
 </body>
