--- a/oblig/gg.html
+++ b/oblig/gg.html
@@ -1,67 +1,151 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-.Dmgout-containers{
-  display:grid;
-}
-.D-R{
-  display: grid;
-position: relative;
-border:2px solid grey;
-background-color: grey;
-
-}
-.avrdmgcritt{
-background-color: thistle;
-display: grid;
-position: relative;
-
-}
-.avrdmg{display: grid;
-  background-color: green;
-  border: 2px solid green;
-position: relative;
-
-}
-.Dmgran{display: grid;
-  background-color: fuchsia;
-position: relative;
-
-}
-.low-dmg{
-  display: grid;
-position: relative;
-background-color: red;
-
-}
-.high-dmg{display: grid;
-position: relative;
-background-color: royalblue;
-
-}
-.avrcrit-dmg{
-  background-color: skyblue;
-  display: grid;
-position: relative;
-
-
-}
-.dmg-rng-critt{
-  background-color: salmon;
-  display: grid;
-position: relative;
-}
-.low-critt{
-  background-color: silver; 
-  display: grid;
-position: relative;
-}
-.high-critt{
-  background-color: gold;
-  display: grid;
-position: relative;
+<div class="grid-container">
+  <div class="Ninjasheet1-containers">
+    <div class="Ninjainfo1-containers">
+      <div class="a3">
+        <div class="position"></div>
+        <div class="Penalty-containers">
+          <div class="is-off"></div>
+          <div class="Y-N"></div>
+          <div class="offpos"></div>
+          <div class="pen"></div>
+        </div>
+      </div>
+      <div class="ninja">
+        <div class="ninjaImg"></div>
+        <div class="er">
+          <div class="Cost"></div>
+          <div class="Chakra"></div>
+        </div>
+      </div>
+      <div class="a4">
+        <div class="theninja">
+          <div class="hei"></div>
+          <div class="ID"></div>
+          <div class="NinjaName"></div>
+        </div>
+        <div class="LVLbox">
+          <div class="button"></div>
+          <div class="LVL"></div>
+        </div>
+      </div>
+    </div>
+    <div class="a1">
+      <div class="fq"></div>
+      <div class="seals">
+        <div class="SealTag"></div>
+        <div class="seal"></div>
+      </div>
+    </div>
+    <div class="a2">
+      <div class="Item-container">
+        <div class="item1"></div>
+        <div class="item2"></div>
+        <div class="item3"></div>
+        <div class="itemTg1"></div>
+        <div class="itemTg2"></div>
+        <div class="itemTg3"></div>
+        <div class="ItemEq"></div>
+        <div class="ItemTg"></div>
+      </div>
+      <div class="BL-container">
+        <div class="bloodline"></div>
+        <div class="blood-line"></div>
+        <div class="bloodlinelvl"></div>
+        <div class="blood-line-LvL"></div>
+      </div>
+      <div class="bonusstat">
+        <div class="qq"></div>
+        <div class="used"></div>
+      </div>
+    </div>
+    <div class="StatRelated">
+      <div class="The-Stats"></div>
+      <div class="Efficantcy"></div>
+      <div class="input-container"></div>
+      <div class="txt">
+        <div class="tai"></div>
+        <div class="nin"></div>
+        <div class="buki"></div>
+        <div class="stam"></div>
+        <div class="ele"></div>
+        <div class="gen"></div>
+        <div class="atk"></div>
+        <div class="strike"></div>
+        <div class="hit"></div>
+        <div class="reroll"></div>
+        <div class="focus"></div>
+        <div class="focus-burst"></div>
+        <div class="focus-range"></div>
+        <div class="buki-rec"></div>
+        <div class="gen-act"></div>
+        <div class="gen-mastery"></div>
+        <div class="gen-rec"></div>
+        <div class="endu"></div>
+      </div>
+      <div class="Stats">
+        <div class="Primestat-containers">
+          <div class="StatNames"></div>
+        </div>
+        <div class="Secondary-containers">
+          <div class="Atk"></div>
+          <div class="Strike"></div>
+          <div class="Hit"></div>
+          <div class="Reroll"></div>
+          <div class="Focus"></div>
+          <div class="Focus-Burst"></div>
+          <div class="Focus-Range"></div>
+          <div class="Buki-boost"></div>
+          <div class="Buki-rec"></div>
+          <div class="Gen-act"></div>
+          <div class="Gen-mastery"></div>
+          <div class="Gen-rec"></div>
+          <div class="Endu"></div>
+        </div>
+      </div>
+      <div class="Effi-container">
+        <div class="tai-effi"></div>
+        <div class="nin-effi"></div>
+        <div class="buki-effi"></div>
+        <div class="stam-effi"></div>
+        <div class="ele-effi"></div>
+        <div class="gen-effi"></div>
+        <div class="atk-effi"></div>
+        <div class="strike-effi"></div>
+        <div class="hit-effi"></div>
+        <div class="reroll-effi"></div>
+        <div class="focus-effi"></div>
+        <div class="focusburst-effi"></div>
+        <div class="focusrange-effi"></div>
+        <div class="boost-effi"></div>
+        <div class="buki-rec-effi"></div>
+        <div class="gen-act-effi"></div>
+        <div class="gen-mastery-effi"></div>
+        <div class="gen-rec-effi"></div>
+        <div class="endu-effi"></div>
+      </div>
+      <div class="input-containers">
+        <div class="s01"></div>
+        <div class="s02"></div>
+        <div class="s03"></div>
+        <div class="s04"></div>
+        <div class="s05"></div>
+        <div class="s06"></div>
+        <div class="s07"></div>
+        <div class="s08"></div>
+        <div class="s09"></div>
+        <div class="s10"></div>
+        <div class="s11"></div>
+        <div class="s12"></div>
+        <div class="s13"></div>
+        <div class="s14"></div>
+        <div class="s15"></div>
+        <div class="s16"></div>
+        <div class="s17"></div>
+        <div class="s18"></div>
+        <div class="s19"></div>
+        <div class="s20"></div>
+      </div>
+    </div>
+   
+  </div>
+</div>
